--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link rel="shortcut icon" href="./media/The ISP Logo.png" type="image/x-icon">
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -33,7 +35,7 @@
 <body>
     <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-transparent">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">The ISP</a>
+            <a class="navbar-brand" href="#"><img src="./media/The ISP Logo.png"/></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -224,25 +226,25 @@
                 <h2>Contact</h2>
                 <footer>
                     <a target="_blank" href="mailto:emperorarthurix@gmail.com">
-                        <img height='40px' src="./media/Gmail Icon.png" alt="GMail">
+                        <img src="./media/Gmail Icon.png" alt="GMail">
                     </a>
                     <a target="_blank" href="https://www.linkedin.com/in/ishaan-sunita-pandita">
-                        <img height='40px' src="./media/Linkedin Icon.png" alt="LinkedIn">
+                        <img src="./media/Linkedin Icon.png" alt="LinkedIn">
                     </a>
                     <a target="_blank" href="https://www.github.com/EmperorArthuriX">
-                        <img height='40px' src="./media/GitHub Icon.svg" alt="GitHub">
+                        <img src="./media/GitHub Icon.svg" alt="GitHub">
                     </a>
                     <a target="_blank" href="https://www.medium.com/@emperorarthurix">
-                        <img height='40px' src="./media/Medium Icon.webp" alt="Medium">
+                        <img src="./media/Medium Icon.webp" alt="Medium">
                     </a>
                     <a target="_blank" href="https://www.twitter.com/panditaishaan">
-                        <img height='40px' src="./media/Twitter Icon.png" alt="Twitter">
+                        <img src="./media/Twitter Icon.png" alt="Twitter">
                     </a>
                     <a target="_blank" href="https://www.instagram.com/emperor_arthur_ix">
-                        <img height='40px' src="./media/Instagram Icon.png" alt="Instagram">
+                        <img src="./media/Instagram Icon.png" alt="Instagram">
                     </a>
                     <a target="_blank" href="https://www.linktr.ee/IshaanPandita">
-                        <img height='40px' src="./media/Linktree Icon.png" alt="LinkTree">
+                        <img src="./media/Linktree Icon.png" alt="LinkTree">
                     </a>
                 </footer>
             </section>
