Improving SEO with Meta Tags

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="refresh" content="0; url=https://emperorarthurix.github.io/The-ISP/">
+    
+    <meta name="description" content="I am Ishaan Sunita Pandita, a Computer Science Engineer. I make data visualisations using Python, develop software applications, and use words to make art!">
 
     <link rel="shortcut icon" href="./media/The ISP Logo.png" type="image/x-icon">
 
@@ -29,7 +32,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <link rel="stylesheet" href="home.css">
-    <title>The ISP</title>
+    <title>Ishaan Sunita Pandita</title>
 </head>
 
 <body>
@@ -72,9 +75,9 @@
                             <h3 class="card-title">Presentation</h5>
                                 <p class="card-text">
                                     Communication is my forte, especially when it comes to conveying information to an
-                                    audience. I have proven my presentation skills while serving my tenure in
-                                    communities
+                                    audience. I have proven my presentation skills while serving my tenure in communities
                                     like GDSC as the Student Lead and by hosting a multitude of events at my University.
+                                    In a way, this is what makes me Ishaan Sunita Pandita, an artist with words.
                                 </p>
                         </div>
                     </div>
@@ -98,7 +101,7 @@
                         <div class="card-body">
                             <h3 class="card-title">Perseverance</h5>
                                 <p class="card-text">
-                                    My actions are driven by my sense of responsiblity. Once I commit to a task, I
+                                    My actions are driven by my sense of responsibility. Once I commit to a task, I
                                     maintain
                                     integrity in completing the same. Despite the obstacles on the way, I ensure to
                                     produce
