Added Projects and Images

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <meta name="description" content="I am Ishaan Sunita Pandita, a Computer Science Engineer. I make data visualisations using Python, develop software applications, and use words to make art!">
+    <meta name="description" content="I am Ishaan Sunita Pandita, and this page discusses my strengths, skills, projects in programming, career, experience and interest in communication with data.">
 
     <link rel="shortcut icon" href="./media/The ISP Logo.png" type="image/x-icon">
 
@@ -19,14 +18,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.css"
         integrity="sha512-OTcub78R3msOCtY3Tc6FzeDJ8N9qvQn1Ph49ou13xgA9VsH9+LRxoFU6EqLhW4+PKRfU+/HReXmSZXHEkpYoOA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <script src="https://code.jquery.com/jquery-3.6.3.js"
+    <script defer src="https://code.jquery.com/jquery-3.6.3.js"
         integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM=" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
+    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
         integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
         crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.js"
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
+    <script defer src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.js"
         integrity="sha512-gY25nC63ddE0LcLPhxUJGFxa2GoIyA5FLym4UJqHDEMHjp8RET6Zn/SHo1sltt3WuVtqfyxECP38/daUc/WVEA=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
@@ -112,7 +111,7 @@
                 </div>
             </section>
 
-            <!-- <section class="projects" id="projects">
+            <section class="projects" id="projects">
                 <h2>Projects</h2>
                 <div class="owl-carousel owl-theme">
                     <div class="card">
@@ -126,10 +125,7 @@
                                 </i>
                             </p>
                             <p class="mb-0">
-                                <b>Tech Stack</b>
-                                <ul class="career-bullets">
-                                    <li>Python</li>
-                                </ul>
+                                A web application prototype to generate downloadable machine learning models trained on an input dataset.
                             </p>
                         </div>
                     </div>
@@ -138,21 +134,63 @@
                             <h3 class="fw-bold mb-4">100 Days of Code</h3>
                             <p class="project-links text-muted mb-4">
                                 <i class="far fa-clock" aria-hidden="true">
-                                    <a target="_blank" href="https://github.com/EmperorArthurIX/MLOnClick">GitHub</a>
+                                    <a target="_blank" href="https://github.com/EmperorArthurIX/100Days">GitHub</a>
                                     |
                                     <a target="_blank" href="https://leetcode.com/emperorarthurix/">LeetCode Profile</a>
                                 </i>
                             </p>
                             <p class="mb-0">
-                                <b>Tech Stack</b>
-                                <ul class="career-bullets">
-                                    <li>Python</li>
-                                </ul>
+                                A challenge taken up to develop consistency and strengthen programming fundamentals.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-body">
+                            <h3 class="fw-bold mb-4">World Population over time</h3>
+                            <p class="project-links text-muted mb-4">
+                                <i class="far fa-clock" aria-hidden="true">
+                                    <a target="_blank" href="https://github.com/EmperorArthurIX/World-Population-App">GitHub</a>
+                                    |
+                                    <a target="_blank" href="https://emperorarthurix-world-population-app-worldapp-eh73e6.streamlit.app/">App on Streamlit Cloud</a>
+                                </i>
+                            </p>
+                            <p class="mb-0">
+                                A data visualisation app aggregating world population data from 1950 to 2020 on the world map.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-body">
+                            <h3 class="fw-bold mb-4">Customisable Neural Networks</h3>
+                            <p class="project-links text-muted mb-4">
+                                <i class="far fa-clock" aria-hidden="true">
+                                    <a target="_blank" href="https://github.com/EmperorArthurIX/Customisable-Neural-Network-App">GitHub</a>
+                                    |
+                                    <a target="_blank" href="https://emperorarthurix-customisable-neural-network-app-mainapp-9gl447.streamlit.app/">App on Streamlit Cloud</a>
+                                </i>
+                            </p>
+                            <p class="mb-0">
+                                An application to help understand the impact of neural network structural and functional parameters on performance.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-body">
+                            <h3 class="fw-bold mb-4">Kotlin Card Generator</h3>
+                            <p class="project-links text-muted mb-4">
+                                <i class="far fa-clock" aria-hidden="true">
+                                    <a target="_blank" href="https://github.com/EmperorArthurIX/KotlinCardGenerator">GitHub</a>
+                                    |
+                                    <a target="_blank" href="https://emperorarthurix.github.io/KotlinCardGenerator/">Web Preview</a>
+                                </i>
+                            </p>
+                            <p class="mb-0">
+                                An application to explore the power of URL parameters while understanding fundamentals of Kotlin
                             </p>
                         </div>
                     </div>
                 </div>
-            </section> -->
+            </section>
 
             <section class="career" id="career">
                 <h2>Career</h2>
@@ -180,7 +218,7 @@
                         </div>
                         <div class="timeline-2 right-2" data-aos="fade-up" data-aos-duration="1500">
                             <div class="card">
-                                <img src="https://mdbcdn.b-cdn.net/img/Photos/Slides/img%20(129).webp"
+                                <img src="./media/GDSC Twitter Social Frames - Community Leader.png"
                                     class="card-img-top" alt="Responsive image">
                                 <div class="card-body p-4">
                                     <h3 class="fw-bold mb-4">Student Lead, Google Developer Student Clubs Amity
@@ -195,6 +233,7 @@
                                             Technical Lead</li>
                                         <li>Collaborated with a senior to facilitate the <i>Google Cloud Career
                                                 Practitioner Programme</i></li>
+                                        <li>Partnered with GDSC Amity Chhattisgarh to organise <i>The DS ABCs</i>, a data structures fundamentals bootcamp</li>
                                         <li>Spearheaded the organisation of <i>Nirman 2023</i>, a 48 Hour National
                                             Level Hackathon</li>
                                     </ul>
@@ -204,8 +243,8 @@
                         </div>
                         <div class="timeline-2 left-2" data-aos="fade-up" data-aos-duration="2000">
                             <div class="card">
-                                <img src="https://mdbcdn.b-cdn.net/img/Photos/Slides/img%20(131).webp"
-                                    class="card-img-top" alt="Responsive image">
+                                <img src="./media/MLSA Badge.png"
+                                    class="card-img-top" alt="Responsive image" style="aspect-ratio: 1.1">
                                 <div class="card-body p-4">
                                     <h3 class="fw-bold mb-4">Microsoft Learn Student Ambassador</h3>
                                     <p class="text-muted mb-4"><i class="far fa-clock" aria-hidden="true"></i> 2022
@@ -215,6 +254,7 @@
                                         <li>Contributed to the first <i>Peer Mentorship Programme</i> in the history
                                             of MLSA</li>
                                         <li>Conducted a <i>Hands-on Workshop for Git and GitHub</i></li>
+                                        <li>Secured the <i>Beta MLSA</i> rank in the community</li>
                                     </ul>
                                     </p>
                                 </div>
